--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "geoip-country": "^4.2.101",
+    "geoip-lite": "^1.4.10",
     "nodemon": "^3.1.0",
     "sqlite3": "^5.1.7",
     "vercel": "^34.2.0"
