--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Justin Vegas 30703464",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
